v0.0.1/modules/schema/pages/class/PssRQB.adoc
= `PssRQB`
:toclevels: 4


+++Power system stabilizer type RQB. This power system stabilizer is intended to be used together with excitation system type ExcRQB, which is primarily used in nuclear or thermal generating units.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:PssRQB`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
**** *`PssRQB`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
PssRQB {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}















ExcitationSystemDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



RemoteInputSignal {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}










PssRQB -> ExcitationSystemDynamics: ExcitationSystemDynamics


PssRQB -> RemoteInputSignal: RemoteInputSignal


PssRQB -> DiagramObject: DiagramObjects


PssRQB -> InstanceSet: InstanceSet


PssRQB -> Name: Names


PssRQB -> ChangeSetMember: PropertiesCIMDataObject


PssRQB -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
| 1
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
| +++Excitation system model with which this power system stabilizer model is associated.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<kdpm,`kdpm`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Lead lag gain (<i>KDPM</i>). Typical value = 0,185.+++

| <<ki2,`ki2`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Speed input gain (<i>Ki2</i>). Typical value = 3,43.+++

| <<ki3,`ki3`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Electrical power input gain (<i>Ki3</i>). Typical value = -11,45.+++

| <<ki4,`ki4`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Mechanical power input gain (<i>Ki4</i>). Typical value = 11,86.+++

| <<sibv,`sibv`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Speed deadband (<i>SIBV</i>). Typical value = 0,006.+++

| <<t4f,`t4f`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Lead lag time constant (<i>T4F</i>) (&gt;= 0). Typical value = 0,045.+++

| <<t4m,`t4m`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Input time constant (<i>T4M</i>) (&gt;= 0). Typical value = 5.+++

| <<t4mom,`t4mom`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Speed time constant (<i>T4MOM</i>) (&gt;= 0). Typical value = 1,27.+++

| <<tomd,`tomd`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Speed delay (<i>TOMD</i>) (&gt;= 0). Typical value = 0,02.+++

| <<tomsl,`tomsl`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Speed time constant (<i>TOMSL</i>) (&gt;= 0). Typical value = 0,04.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<RemoteInputSignal,`RemoteInputSignal`>>
| 0..*
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]
| +++Remote input signal used by this power system stabilizer model.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#ExcitationSystemDynamics]
=== `ExcitationSystemDynamics`
+++Excitation system model with which this power system stabilizer model is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemStabilizerDynamics.ExcitationSystemDynamics`
| Cardinality
| 1
| Type
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| Inherited from
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#kdpm]
=== `kdpm`
+++Lead lag gain (<i>KDPM</i>). Typical value = 0,185.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssRQB.kdpm`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#ki2]
=== `ki2`
+++Speed input gain (<i>Ki2</i>). Typical value = 3,43.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssRQB.ki2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#ki3]
=== `ki3`
+++Electrical power input gain (<i>Ki3</i>). Typical value = -11,45.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssRQB.ki3`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#ki4]
=== `ki4`
+++Mechanical power input gain (<i>Ki4</i>). Typical value = 11,86.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssRQB.ki4`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#RemoteInputSignal]
=== `RemoteInputSignal`
+++Remote input signal used by this power system stabilizer model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemStabilizerDynamics.RemoteInputSignal`
| Cardinality
| 0..*
| Type
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]

| Inherited from
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]


|===

//[discrete]
[#sibv]
=== `sibv`
+++Speed deadband (<i>SIBV</i>). Typical value = 0,006.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssRQB.sibv`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#t4f]
=== `t4f`
+++Lead lag time constant (<i>T4F</i>) (&gt;= 0). Typical value = 0,045.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssRQB.t4f`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t4m]
=== `t4m`
+++Input time constant (<i>T4M</i>) (&gt;= 0). Typical value = 5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssRQB.t4m`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t4mom]
=== `t4mom`
+++Speed time constant (<i>T4MOM</i>) (&gt;= 0). Typical value = 1,27.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssRQB.t4mom`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#tomd]
=== `tomd`
+++Speed delay (<i>TOMD</i>) (&gt;= 0). Typical value = 0,02.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssRQB.tomd`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tomsl]
=== `tomsl`
+++Speed time constant (<i>TOMSL</i>) (&gt;= 0). Typical value = 0,04.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssRQB.tomsl`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===


