v1.1.0/modules/schema/pages/class/PssRQB.adoc
= `PssRQB`
:toclevels: 4


+++Power system stabilizer type RQB. This power system stabilizer is intended to be used together with excitation system type ExcRQB, which is primarily used in nuclear or thermal generating units.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:PssRQB`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
**** *`PssRQB`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<kdpm,`kdpm`>>
//| [[slots_table.kdpm]]<<kdpm,`kdpm`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Lead lag gain (<i>KDPM</i>). Typical value = 0,185.+++
| _n/a_

| <<ki2,`ki2`>>
//| [[slots_table.ki2]]<<ki2,`ki2`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Speed input gain (<i>Ki2</i>). Typical value = 3,43.+++
| _n/a_

| <<ki3,`ki3`>>
//| [[slots_table.ki3]]<<ki3,`ki3`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Electrical power input gain (<i>Ki3</i>). Typical value = -11,45.+++
| _n/a_

| <<ki4,`ki4`>>
//| [[slots_table.ki4]]<<ki4,`ki4`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Mechanical power input gain (<i>Ki4</i>). Typical value = 11,86.+++
| _n/a_

| <<sibv,`sibv`>>
//| [[slots_table.sibv]]<<sibv,`sibv`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Speed deadband (<i>SIBV</i>). Typical value = 0,006.+++
| _n/a_

| <<t4f,`t4f`>>
//| [[slots_table.t4f]]<<t4f,`t4f`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Lead lag time constant (<i>T4F</i>) (&gt;= 0). Typical value = 0,045.+++
| _n/a_

| <<t4m,`t4m`>>
//| [[slots_table.t4m]]<<t4m,`t4m`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Input time constant (<i>T4M</i>) (&gt;= 0). Typical value = 5.+++
| _n/a_

| <<t4mom,`t4mom`>>
//| [[slots_table.t4mom]]<<t4mom,`t4mom`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Speed time constant (<i>T4MOM</i>) (&gt;= 0). Typical value = 1,27.+++
| _n/a_

| <<tomd,`tomd`>>
//| [[slots_table.tomd]]<<tomd,`tomd`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Speed delay (<i>TOMD</i>) (&gt;= 0). Typical value = 0,02.+++
| _n/a_

| <<tomsl,`tomsl`>>
//| [[slots_table.tomsl]]<<tomsl,`tomsl`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Speed time constant (<i>TOMSL</i>) (&gt;= 0). Typical value = 0,04.+++
| _n/a_

| <<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
//| [[slots_table.ExcitationSystemDynamics]]<<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
| 1 +
xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
| +++Excitation system model with which this power system stabilizer model is associated.+++
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]

| <<RemoteInputSignal,`RemoteInputSignal`>>
//| [[slots_table.RemoteInputSignal]]<<RemoteInputSignal,`RemoteInputSignal`>>
| 0..* +
xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]
| +++Remote input signal used by this power system stabilizer model.+++
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#ExcitationSystemDynamics]
=== `ExcitationSystemDynamics`
+++Excitation system model with which this power system stabilizer model is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemStabilizerDynamics.ExcitationSystemDynamics`
| Cardinality
| 1
| Type
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| Inherited from
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]


|===

////
[.text-left]
--
<<slots_table.ExcitationSystemDynamics,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#kdpm]
=== `kdpm`
+++Lead lag gain (<i>KDPM</i>). Typical value = 0,185.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssRQB.kdpm`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.kdpm,&#10548;>>
--
////


//[discrete]
[#ki2]
=== `ki2`
+++Speed input gain (<i>Ki2</i>). Typical value = 3,43.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssRQB.ki2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.ki2,&#10548;>>
--
////


//[discrete]
[#ki3]
=== `ki3`
+++Electrical power input gain (<i>Ki3</i>). Typical value = -11,45.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssRQB.ki3`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.ki3,&#10548;>>
--
////


//[discrete]
[#ki4]
=== `ki4`
+++Mechanical power input gain (<i>Ki4</i>). Typical value = 11,86.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssRQB.ki4`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.ki4,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#RemoteInputSignal]
=== `RemoteInputSignal`
+++Remote input signal used by this power system stabilizer model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemStabilizerDynamics.RemoteInputSignal`
| Cardinality
| 0..*
| Type
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]

| Inherited from
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]


|===

////
[.text-left]
--
<<slots_table.RemoteInputSignal,&#10548;>>
--
////


//[discrete]
[#sibv]
=== `sibv`
+++Speed deadband (<i>SIBV</i>). Typical value = 0,006.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssRQB.sibv`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.sibv,&#10548;>>
--
////


//[discrete]
[#t4f]
=== `t4f`
+++Lead lag time constant (<i>T4F</i>) (&gt;= 0). Typical value = 0,045.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssRQB.t4f`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t4f,&#10548;>>
--
////


//[discrete]
[#t4m]
=== `t4m`
+++Input time constant (<i>T4M</i>) (&gt;= 0). Typical value = 5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssRQB.t4m`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t4m,&#10548;>>
--
////


//[discrete]
[#t4mom]
=== `t4mom`
+++Speed time constant (<i>T4MOM</i>) (&gt;= 0). Typical value = 1,27.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssRQB.t4mom`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t4mom,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tomd]
=== `tomd`
+++Speed delay (<i>TOMD</i>) (&gt;= 0). Typical value = 0,02.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssRQB.tomd`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tomd,&#10548;>>
--
////


//[discrete]
[#tomsl]
=== `tomsl`
+++Speed time constant (<i>TOMSL</i>) (&gt;= 0). Typical value = 0,04.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssRQB.tomsl`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tomsl,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
